[gd_scene load_steps=23 format=3 uid="uid://ckj8nx2ww3lvi"]

[ext_resource type="Script" uid="uid://c820blkb4e4i3" path="res://src/portrait/portrait.gd" id="1_nopd3"]
[ext_resource type="SpriteFrames" uid="uid://cv2peqpu60ype" path="res://assets/characters/portraits/parts/test_l_body.ase_layer" id="2_1srbf"]
[ext_resource type="SpriteFrames" uid="uid://cciisolqmj4pk" path="res://assets/characters/portraits/parts/test_l_hair_back.ase_layer" id="2_01wiw"]
[ext_resource type="SpriteFrames" uid="uid://dtm5kniw7ye2f" path="res://assets/characters/portraits/parts/test_l_hat_back.ase_layer" id="2_b7wet"]
[ext_resource type="SpriteFrames" uid="uid://ctx7muknor2pj" path="res://assets/characters/portraits/parts/test_l_face.ase_layer" id="3_ym1tx"]
[ext_resource type="SpriteFrames" uid="uid://qejcv5kplcwp" path="res://assets/characters/portraits/parts/test_l_eye.ase_layer" id="4_yr8g5"]
[ext_resource type="SpriteFrames" uid="uid://btf1te8sollb7" path="res://assets/characters/portraits/parts/test_l_eyebrow.ase_layer" id="5_yr8g5"]
[ext_resource type="SpriteFrames" uid="uid://k62qd06s67ap" path="res://assets/characters/portraits/parts/test_l_eyelid.ase_layer" id="7_gywy8"]
[ext_resource type="SpriteFrames" uid="uid://da4rj407mh4cd" path="res://assets/characters/portraits/parts/test_l_clothing.ase_layer" id="8_xw80p"]
[ext_resource type="SpriteFrames" uid="uid://dgm8lf4q5b5y0" path="res://assets/characters/portraits/parts/test_l_mouth.ase_layer" id="9_2lwib"]
[ext_resource type="SpriteFrames" uid="uid://dsa5qcc113iy4" path="res://assets/characters/portraits/parts/test_l_hair_front.ase_layer" id="9_hmk5t"]
[ext_resource type="SpriteFrames" uid="uid://cbbxvptoy0qa2" path="res://assets/characters/portraits/parts/test_l_cheek.ase_layer" id="10_ahuyi"]
[ext_resource type="SpriteFrames" uid="uid://cin6did1bbm1p" path="res://assets/characters/portraits/parts/test_l_hat.ase_layer" id="10_b7wet"]
[ext_resource type="SpriteFrames" uid="uid://6xx7snmdx3mu" path="res://assets/characters/portraits/parts/test_l_eye_close.ase_layer" id="11_7djfg"]
[ext_resource type="SpriteFrames" uid="uid://10gbew7o1pv7" path="res://assets/characters/portraits/parts/test_l_glasses.ase_layer" id="11_37xmf"]
[ext_resource type="Shader" uid="uid://de1ufp1ju1847" path="res://assets/material/portrait.gdshader" id="13_iqhcp"]
[ext_resource type="Script" uid="uid://b0vr4n4lcly41" path="res://src/portrait/part.gd" id="15_1xxpq"]
[ext_resource type="Texture2D" uid="uid://ks5ufqqv2r0u" path="res://assets/characters/portraits/pelettes.png" id="16_c0ulj"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_c0ulj"]
shader = ExtResource("13_iqhcp")
shader_parameter/og_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/new_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_qdlo0"]
shader = ExtResource("13_iqhcp")
shader_parameter/og_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/new_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_uxjvr"]
shader = ExtResource("13_iqhcp")
shader_parameter/og_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/new_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vnlt0"]
shader = ExtResource("13_iqhcp")
shader_parameter/og_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
shader_parameter/new_color = PackedColorArray(0.4, 0.278431, 0.317647, 1, 0.25098, 0.14902, 0.235294, 1, 0.2, 0.109804, 0.2, 1, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0.2, 0.109804, 0.2, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="Portrait" type="Node2D"]
script = ExtResource("1_nopd3")
default_palette = ExtResource("16_c0ulj")

[node name="hat_back" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("2_b7wet")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="hair_back" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
material = SubResource("ShaderMaterial_c0ulj")
sprite_frames = ExtResource("2_01wiw")
frame = 1
script = ExtResource("15_1xxpq")
ref_palette = PackedColorArray(0.25098, 0.14902, 0.235294, 1, 0.141176, 0.0745098, 0.14902, 1)
palettes = Array[PackedColorArray]([PackedColorArray(0.753067, 0.8, 0.544, 1, 0.19768, 0.21, 0.1428, 1)])
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="body" type="AnimatedSprite2D" parent="." groups=["portrait_body"]]
texture_filter = 1
sprite_frames = ExtResource("2_1srbf")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="clothing" type="AnimatedSprite2D" parent="." groups=["portrait_body"]]
texture_filter = 1
material = SubResource("ShaderMaterial_qdlo0")
sprite_frames = ExtResource("8_xw80p")
frame = 1
script = ExtResource("15_1xxpq")
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="face" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("3_ym1tx")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="cheek" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("10_ahuyi")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="eye" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
sprite_frames = ExtResource("4_yr8g5")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="eye_close" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
visible = false
sprite_frames = ExtResource("11_7djfg")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="eyebrow" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("5_yr8g5")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="eyelid" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("7_gywy8")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="mouth" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("9_2lwib")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="glasses" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
sprite_frames = ExtResource("11_37xmf")
frame = 1
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="hair_front" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
material = SubResource("ShaderMaterial_uxjvr")
sprite_frames = ExtResource("9_hmk5t")
frame = 1
script = ExtResource("15_1xxpq")
ref_palette = PackedColorArray(0.141176, 0.0745098, 0.14902, 1, 0.25098, 0.14902, 0.235294, 1, 0.4, 0.278431, 0.317647, 1, 0.34902, 0.243137, 0.298039, 1, 0.2, 0.109804, 0.2, 1)
palettes = Array[PackedColorArray]([PackedColorArray(0.19768, 0.21, 0.1428, 1, 0.470667, 0.5, 0.34, 1, 0.941333, 1, 0.68, 1, 0.753067, 0.8, 0.544, 1, 0.357707, 0.38, 0.2584, 1)])
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "^_",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/test.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "e41684248b16667028563257aa20a0cc"

[node name="hat" type="AnimatedSprite2D" parent="." groups=["portrait_head"]]
texture_filter = 1
material = SubResource("ShaderMaterial_vnlt0")
sprite_frames = ExtResource("10_b7wet")
frame = 1
script = ExtResource("15_1xxpq")
metadata/_aseprite_wizard_interface_config_ = {
"animation_section": true,
"layer_section": true,
"output_section": true,
"pending_changes": {},
"slice_section": true
}
metadata/_aseprite_wizard_config_ = {
"embed_tex": true,
"layers": [],
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": true,
"should_round_fps": true,
"slice": "",
"source": "res://assets/characters/portraits/parts/スプライト-0001.aseprite"
}
metadata/_aseprite_wizard_source_file_hash_ = "ca305c9e6845b58b8f1310a22909e0e6"

[node name="Timer" type="Timer" parent="."]
